styles/styles.css
@font-face {
    font-family: mainFont;
    src: url(../assets/fonts/Plus_Jakarta_Sans/PlusJakartaSans-VariableFont_wght.ttf);
}

:root{
    margin: 0 auto;
    --columns: 3;
    --containerwidth: 450px;
    --feldgroesse: var(--containerwidth) / var(--columns);
    
}

* {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

body{
    margin: 0 auto;
    text-align: center;
    font-family: mainFont;
    display: flex;
    align-content: space-between;
    flex-wrap: wrap;
    height: 100vh;
}

footer,header,main,.content {
    width: 100%;
}

main{
    margin-top: 2em;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1em;
}

footer{
    border-top: 1px solid black;
    padding: 1em;
    text-align: center;
}

h1{
    display: inline-block;
    margin-top: 1em;
    margin-bottom: 1em;
    text-align: center;
    color: black;
    transition: 0.3s;
}

h1:hover{
    transform-origin: center;
    transform: scale(1.1);
}

nav{
    text-align: center;
    white-space: nowrap;
}

nav a{
    transition: 0.2s;
    border-radius: 20px;
    padding: 15px 32px;
    text-decoration: none;
    color: black;
}

nav a:hover{
    background-color: black;
    color: white;
}

.navActive {
    background-color: black;
    color: white;
}

button{
    background-color: #f4511e;
    display: flexbox;
    border: none;
    color: white;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    transition: 0.3s;
    border: 1px solid #f4511e;
    border-radius: 15px;

}

button:hover {
    cursor: pointer;
    background-color: white;
    color: black;
    border: 1px solid black;
    transform: scale(1.1);
    
}

#startbild {
    width: 25%;
}

p {
    width: 60%;
    margin: 0 auto;
}

#hfu_bild {
    width: 30%;
    transition:0.3s;
    cursor: pointer;
}

#hfu_bild:hover{
    opacity: 60%;
}

.setting {
    background-color: white;
    box-shadow: 0 0 20px -10px black;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    margin: 1rem;
    padding: 1rem;
    width: max-content;
    border-radius: 20px;
    
}
#slider{
    margin: 0em 1em;
}

h2 {
    margin: 0;
}

.labels {
    display: flex;
    justify-content: space-between;
    padding-left: 7px;
    padding-right: 5px;
}

.iconAuswahl {
    display: flex;
    flex-direction: column;
    gap: 5px;
    align-items: center;
    opacity: 18%;
    transition: 0.2s;
}

.iconAuswahl:hover {
    opacity: 100%;
}

.iconAuswahl.high {
    opacity: 100%;
}

.previewIcon {
    object-fit: contain;
    transition: 0.3s;
    width: 3em;
    height: 3em;
    cursor: pointer;
}

.previewIcon:hover {
    opacity: 100%;
    transform: scale(1.1);
}


.resetButtons {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.resetButtons button {
    padding: 10px 15px;
}

#showNumbers {
    display: none;
}

.boardContainer {
    position: relative;
}

.endscreen {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    border-radius: 20px;
    padding: 1rem;
    background-color: white;
    box-shadow: 0 0 20px -10px black;
    align-items: center;
    justify-content: center;
    gap: 15px;
}

.endscreen.show {
    display: flex;
    cursor: pointer;
}

.endText {
    font-size: 2em;
    width: 100%;
    white-space: nowrap;
}

.winningIcon {
    width: 3em;
    display: none;
}

.winningIcon.show {
    display: block;
}

#spiel {
    display: grid;
    grid-template-columns:  repeat(var(--columns),auto);
    column-gap: 0px;
    width: var(--containerwidth);
    height: var(--containerwidth);
    margin: 0 auto;
    padding: 1em;
    position: relative;
}

.board {
    transition: 0.3s;
    overflow: hidden;
}

.board.show {
    opacity: 30%;
    /*filter: blur(3px);*/
    pointer-events: none;
}

.grid-item.x:hover, .grid-item.o:hover {
    cursor: not-allowed;
}

.grid-item {
    background-color: rgb(255, 255, 255);
    width: var(--feldgroesse);
    height: var(--feldgroesse);
    font-size: 20px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.3s;
    cursor: pointer;
  }

.grid-item.high {
    background-color: #f4511e;
}

.grid-item.low {
    background-color: yellow;
}

.icon {
    image-rendering: auto;
    object-fit: contain;
    height: 75%;
    width: 80%;
    /*will-change: transform;*/
    animation: appear 0.3s cubic-bezier(0.5,1.2,0.1,1.1);
   
}

@keyframes appear {
    0% {
    transform: scale(0.3);
    opacity: 0%;
    filter: blur(2px);
    }
  100% {
    transform: scale(1);
    opacity: 100%;
    filter: blur(0px);
    }
}

